# ocd

./: 11c.hs  13.hs  15b.hs  1_3.hs  1_4.hs  2_10.hs  2_4.hs  2_8.hs  2_9.hs  3_1.hs  3_10.hs  3_2.hs  3_3.hs  3_4.hs  3_5.hs  3_7.hs  3_8.hs  3_9.hs  LICENSE  Lib.hs  ocd.cabal
src/: Chapter04.hs  EllipticCurve.hs  Lib.hs
src/Chapter01/: 1_2.hs  1_3.hs  1_7.hs
src/Chapter01/1.1/: 11c.hs  15b.hs
src/Chapter02/: 2_10.hs  2_2.hs  2_4.hs  2_8.hs
src/Chapter03/: 3_1.hs  3_10.hs  3_2.hs  3_3.hs  3_4.hs  3_5.hs  3_7.hs  3_8.hs
src/Chapter05/: Sect1.hs  Sect3.hs  Sect45.hs  Sect6.hs
src/Chapter06/: Sect12.hs  Sect3.hs  Sect4.hs  Sect6.hs  Sect7.hs  Sect8.hs  Sect910.hs
src/Chapter07/: Sect10.hs  Sect123.hs  Sect4.hs  Sect56.hs  Sect8.hs  Sect9.hs
src/Lib/: AddGroup.hs  ConvPolynomial.hs  EllipticCurve.hs  EllipticCurveGeneralised.hs  Field.hs  Lattice.hs  Matrix.hs  Polynomial.hs
