name:                ocd
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ilona Prikule
maintainer:          inprikule@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lib
  build-depends:       base >=4.9 && <4.10
                     , primes >=0.2
                     , data-ordlist >=0.4.7
                     , containers >= 0.5.7
  hs-source-dirs:      src
  default-language:    Haskell2010
--  ghc-options:         -Wall
  default-extensions:   TupleSections
                        ViewPatterns
                        RecordWildCards
                        LambdaCase
                        MultiWayIf
                        BangPatterns
                        UnicodeSyntax
                        MagicHash
                        DuplicateRecordFields
                        FlexibleInstances
